@startuml

class Etablissement {
    - nom : string
    - slug : string
    - description : string
    - telephone : string
    - CP_ville : string
    - email : string
    - image : string
    - actif : bool
    - accueil : bool
    - createdAt : date
    - updatedAt : date
}

class User {
    -prenom : string
    -nom : string
    -pseudo : string
    -email : string
    -password : string
    -createdAt : date
    -updatedUp : date
    -roles : string
    -actif : bool
}

class Ville {
    - nom : string
    - CP_ville : string
    - departement : string
    - No_departement
    - region
}

class Categorie {
    - nom : string
    - createdAt : date
}

Etablissement "0..*" -- "1..1" Ville
Categorie "1..*" -- "0..*" Etablissement


@enduml